@@ -61,7 +61,7 @@ sg_Quaternion sg_Quaternion_mul(sg_Quaternion a, sg_Quaternion b) {
   c.w = a1*b1 - a2*b2 - a3*b3 - a4*b4;
   c.x = a1*b2 + a2*b1 + a3*b4 - a4*b3;
   c.y = a1*b3 - a2*b4 + a3*b1 + a4*b2;
-  c.z = a1*b4 + a2*b3 - a3*b2 + a4*b1; 
+  c.z = a1*b4 + a2*b3 - a3*b2 + a4*b1;
   
   return c;
 }
